Simplified parser, cleanups